public/css/dark.css
body,html {
  height: 100%;
  margin: 0;
  padding: 0;
  background: #222;
  box-sizing: border-box;
  font-size: 18px;
}
h1,h2,h3 {
  margin: 0;
  padding-top: 5px;
  padding-bottom: 0;
}
h1 img {
  padding-left: 20px;
  padding-right: 20px;
  width: 60px;
}
br {
  display: block;
  height: 0;
}
.home {
  color: lightgrey;
  min-height: 100%;
  box-sizing: border-box;
}
.home table {
  padding-left: 20px;
  padding-top: 4px;
  padding-bottom: 4px;
}
#content {
  min-height: 100%;
  box-sizing: border-box;
  padding: 5px;
  background: #222;
  color: lightgray;
}
#content .status {
  padding: 20px;
}
#card-metrics {
  font-size: 15px;
}
.buttons {
  padding-top: 5px;
  padding-bottom: 10px;
  width: 100%;
  text-align: center;
}
#front_face img {
  max-width: 200px;
  max-height: 200px;
}
#back_face img {
  max-width: 200px;
  max-height: 200px;
}
audio {
  display: none;
}
#signal {
  position: fixed;
  right: 0;
  text-align: right;
}
#signal img {
  height: 24px;
}
.chart {
  height: 220px;
  width: 100%;
  box-sizing: border-box;
}

a:visited {
  color: lightgray;
}

.status th {
  text-align: left;
}

button {
  background-color: darkgray;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 4px;
  padding-right: 4px;
  font-family: inherit;
  font-size: inherit;
}

a.default_action {
  background-color: lightgray;
}

#study {
  background-color: #ba5d50;
}

#study.default_action {
  background-color: #1c7a43;
}

.hidden {
  display: none;
}

#front_content {
  min-height: 100%;
  box-sizing: border-box;
  padding: 5px;
  background: #222;
  color: lightgray;
}

